[metadata]
name = ReactPy
version = 1.0.0
author = Rudresh Veerkhare
author_email = veerkharerudresh@gmail.com
description = React in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RudreshVeerkhare/ReactPy
project_urls =
    Bug Tracker = https://github.com/RudreshVeerkhare/ReactPy/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
