[metadata]
name = ReactPy
version = 0.0.3
author = Rudresh Veerkhare
author_email = veerkharerudresh@gmail.com
description = React implementation in Python 3, running on the client-side.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RudreshVeerkhare/ReactPy
project_urls =
    Bug Tracker = https://github.com/RudreshVeerkhare/ReactPy/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyPEG2
    livereload
